--- a/BasicHTML and CSS/style.css
+++ b/BasicHTML and CSS/style.css
@@ -78,7 +78,7 @@ img{
     color: #000;
     font-size: 20px;
     margin-left: 20px;
-    font-family: impact;
+    font-family: sans-serif;
 }
 .content span{
     color:#92C914;
